AX: VoiceOver can't press on items https://bugs.webkit.org/show_bug.cgi?id=114071

Reviewed by Tim Horton.

Source/WebCore:

The AXScrollToVisibleAction should not be used on earlier Mac versions because
it confuses VoiceOver.

Updated existing tests.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityActionNames]):

LayoutTests:

* platform/mac-future/accessibility: Added.
* platform/mac-future/accessibility/press-action-is-first-expected.txt: Added.
* platform/mac/accessibility/press-action-is-first-expected.txt:


Canonical link: https://commits.webkit.org/132453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147824 268f45cc-cd09-0410-ab3c-d52691b4dbfc