Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm
@@ -925,11 +925,20 @@ static id textMarkerRangeFromVisiblePositions(AXObjectCache *cache, VisiblePosit
         return nil;
     
     // All elements should get ShowMenu and ScrollToVisible.
+    // But certain earlier VoiceOver versions do not support scroll to visible, and it confuses them to see it in the list.
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 1090
+    static NSArray *defaultElementActions = [[NSArray alloc] initWithObjects:NSAccessibilityShowMenuAction, nil];
+#else
     static NSArray *defaultElementActions = [[NSArray alloc] initWithObjects:NSAccessibilityShowMenuAction, NSAccessibilityScrollToVisibleAction, nil];
+#endif
 
     // Action elements allow Press.
     // The order is important to VoiceOver, which expects the 'default' action to be the first action. In this case the default action should be press.
+#if __MAC_OS_X_VERSION_MIN_REQUIRED < 1090
+    static NSArray *actionElementActions = [[NSArray alloc] initWithObjects:NSAccessibilityPressAction, NSAccessibilityShowMenuAction, nil];
+#else
     static NSArray *actionElementActions = [[NSArray alloc] initWithObjects:NSAccessibilityPressAction, NSAccessibilityShowMenuAction, NSAccessibilityScrollToVisibleAction, nil];
+#endif
 
     // Menu elements allow Press and Cancel.
     static NSArray *menuElementActions = [[actionElementActions arrayByAddingObject:NSAccessibilityCancelAction] retain];
